deploy/test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artemis-handbrake-test
  labels:
    openshift.io/cluster-monitoring: "true"
